--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -13,12 +13,19 @@
       Abandonner
     </a>
   </div>
+  <div class="ms-auto">
+    <a class="btn btn-sm btn-secondary" role="button" (click)="getPurchaseOrderAttachment()"
+      *ngIf=" order && order.customerOrderStatus.code != CUSTOMER_ORDER_STATUS_OPEN && order.customerOrderStatus.code != CUSTOMER_ORDER_STATUS_ABANDONED ">
+      <i class="ai-download ms-n1 me-2"></i>
+      Voir le bon de commande
+    </a>
+  </div>
 </div>
 <div class="alert alert-danger d-flex  flex-column flex-md-row align-items-center mb-0 mb-2" role="alert"
   *ngIf="order && order.customerOrderStatus && order.customerOrderStatus.code == CUSTOMER_ORDER_STATUS_WAITING_DEPOSIT">
   <i class="ai-circle-info fs-xl"></i>
   <div class="ps-2">Payez votre acompte pour lancer le traitement de votre commande !</div>
-  <a class="btn btn-sm btn-primary  mt-3 mt-md-0 ms-4" *ngIf="order  && displayPayButton"
+  <a class="btn btn-sm btn-primary mt-3 mt-md-0 ms-4" *ngIf="order && displayPayButton"
     [routerLink]=' "/account/order/pay/" + order.id'>
     <i class="ai-cart ms-n1 me-2"></i>
     <span>Payer l'acompte</span>
