move kpi logic to kpi widget

--- a/client-osiris/src/app/modules/crm/components/crm/crm.component.html
+++ b/client-osiris/src/app/modules/crm/components/crm/crm.component.html
@@ -1,5 +1,18 @@
 <div class="container-fluid">
   <app-page-title title="CRM" />
+  <div class="row g-1">
+    <div class="card analytic-card">
+      <div class="card-body p-0">
+        <div class="row g-0">
+          <div class="col-12 ">
+            <div class="card-header justify-content-between ">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="row g-1" *ngIf="selectedKpiCrm && series && series.length>0">
     <div class="card analytic-card">
       <div class="card-body p-0">
@@ -40,11 +53,9 @@
 
   <div class="row row-cols-xxl-7 row-cols-md-4 row-cols-3 align-items-center">
     @for (kpiCrm of kpiCrms; track $index) {
-    @if(kpiCrmsValues[kpiCrm.code]!=undefined && kpiCrmsValues[kpiCrm.code]!=null) {
+    @if(isLoading && searchModel && searchModel.startDateKpis && searchModel.endDateKpis) {
     <div class="col">
-      <kpi-widget [kpiCrm]="kpiCrm" [value]="kpiCrmsValues[kpiCrm.code]" [valueN1]="kpiCrmsValuesN1[kpiCrm.code]"
-        [valueN2]="kpiCrmsValuesN2[kpiCrm.code]" [evolution]="kpiCrmsValuesEvolution[kpiCrm.code]"
-        [evolutionIsGood]="kpiCrmsValuesEvolutionGood[kpiCrm.code]" (onDisplayDetails)="displayDetails(kpiCrm)" />
+      <kpi-widget [kpiCrm]="kpiCrm" [searchModel]="searchModel" (onDisplayDetails)="displayDetails(kpiCrm)" />
     </div>
     }
     }
