--- a/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.html
+++ b/client-myjss/src/app/modules/tools/components/mandatory-documents/mandatory-documents.component.html
@@ -107,6 +107,14 @@
                   <li class="d-flex pb-2 mb-1">
                     <span class="bg-primary mt-2 checkbox-custom"></span>
                     <span class="text-decoration-none text-gray">{{item.typeDocument.customLabel}}</span>
+                    <button type="button"
+                      class="ms-3 btn btn-outline-secondary btn-sm d-flex align-items-center btn-icon-only"
+                      *ngIf="item.typeDocument.attachments && item.typeDocument.attachments[0]"
+                      (click)="downloadAttachment(item.typeDocument.attachments[0])" ngbTooltip="Télécharger le modèle"
+                      tooltipClass="custom-tooltip" placement="top">
+                      <i class="bi bi-download"></i>
+                      <span class="d-none d-lg-inline ms-1">Télécharger le modèle</span>
+                    </button>
                   </li>
                 </div>
               </ng-container>
