--- a/client-osiris/src/app/modules/crm/components/crm/crm.component.html
+++ b/client-osiris/src/app/modules/crm/components/crm/crm.component.html
@@ -7,6 +7,7 @@
         <div class="row g-0">
           <div class="col-12 ">
             <div class="card-header  " style="border-bottom-style: solid;">
+              <span style="font-weight: bolder;">Catégorie :</span>
               @for(category of kpiCrmCategories; track $index){
               <a helper-text class="badge  fs-xs fw-semibold p-1 pointer"
                 [ngClass]="selectedKpiCrmCategory &&  category.id == selectedKpiCrmCategory.id ? 'text-bg-primary':'text-bg-light'"
@@ -98,13 +99,15 @@
             </p>
           </a>
           <ng-template ngbNavContent>
-            @for (form of forms; track form.accessorKey.toString()) {
+            @for (form of forms; track $index) {
+            @if(form.form && form.accessorKey){
             <div class="col-12 mt-2 mb-2">
               <generic-form [formGroup]="searchForm" [(model)]="searchModel[form.accessorKey]" [label]="form.form.label"
                 [type]="form.form.type" [inputType]="form.form.inputType" [selectType]="form.form.selectType"
                 [validators]="form.form.validators" [errorMessages]="form.form.errorMessages"></generic-form>
             </div>
             <hr />
+            }
             }
           </ng-template>
         </li>
