--- a/client-osiris/src/assets/scss/app.scss
+++ b/client-osiris/src/assets/scss/app.scss
@@ -101,3 +101,15 @@
 .pointer {
   cursor: pointer;
 }
+
+// TODO :
+// .autocomplete-container .input-container input {
+//   @extend .form-control;
+// }
+// .input-container {
+//   @extend .form-control
+// }
+
+// .custom-class-input{
+//   @extend .form-control
+// }
