--- a/client-osiris/src/app/modules/main/components/topbar/topbar.component.html
+++ b/client-osiris/src/app/modules/main/components/topbar/topbar.component.html
@@ -1,14 +1,24 @@
 <header class="app-topbar">
   <div class="container-fluid topbar-menu">
-    <div class="d-flex align-items-center gap-2">
+    <div class="d-flex align-items-center justify-content-between gap-2">
       <!-- Sidebar Menu Toggle Button -->
-      <button (click)="toggleSidebar()" class="sidenav-toggle-button btn btn-primary btn-icon m-2">
-        <ng-icon name="tablerMenu4" class="fs-22" />
+      <button (click)="toggleSidebar()" class="d-flex sidenav-toggle-button btn btn-primary btn-icon m-2">
+        <ng-icon name="tablerMenu4" class="fs-xxl" />
       </button>
-
     </div>
 
     <div class="d-flex align-items-center gap-2">
+      <!-- Sidebar Menu Toggle Button -->
+      <div class="topbar-item d-none d-sm-flex">
+        <button (click)="toggleTheme()" class="sidenav-toggle-button topbar-link m-2" type="button">
+          @if (layout.theme === 'light') {
+          <ng-icon name="tablerMoon" class="fs-xxl mode-light-moon" />
+          }
+          @if (layout.theme === 'dark') {
+          <ng-icon name="tablerSun" class="fs-xxl mode-light-sun" />
+          }
+        </button>
+      </div>
     </div>
   </div>
 </header>
