--- a/client-osiris/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client-osiris/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -126,8 +126,10 @@
               class="d-flex col justify-content-between align-items-center {{!last && 'border-bottom'}} {{first ? 'pb-2' : 'py-2'}}">
               <div class="d-flex align-items-center gap-2">
                 <div class="img-fluid rounded pointer">
-                  <avatar [stringInput]="respo.firstname+' '+ respo.lastname" [size]="40" [borderRadius]="10">
-                  </avatar>
+                  <a [routerLink]="'responsable/'+respo.id">
+                    <avatar [stringInput]="respo.firstname+' '+ respo.lastname" [size]="40" [borderRadius]="10">
+                    </avatar>
+                  </a>
                 </div>
                 <div>
                   <h5 class="fs-sm mb-0 lh-base">{{ respo.firstname +" "+ respo.lastname}}</h5>
@@ -160,7 +162,7 @@
           <div class="col">
             <h5 class="mb-2">Compte comptable client :</h5>
             <p class="mb-0">{{tiers.accountingAccountCustomer}}</p>
-            <h5 class="mb-2 mt-3">Observations :</h5>
+            <h5 class="mb-2 mt-3">Compte comptable d'acompte :</h5>
             <p class="mb-0">{{tiers.accountingAccountDeposit}}</p>
           </div>
         </div>
