added osiris update for assoNoticeTempalteFragment evol

--- a/client-osiris/src/app/modules/tiers/components/tiers-header/tiers-header.component.html
+++ b/client-osiris/src/app/modules/tiers/components/tiers-header/tiers-header.component.html
@@ -9,6 +9,7 @@
         </div>
         }
         <div>
+          <!-- TODO : ajouter civilité et vérifier si isIndividual dans le tiers à remonter avant d'afficher -->
           <h4 class="text-nowrap fw-bold mb-1"> {{tiers.denomination? tiers.denomination : (tiers.firstname +'
             '+tiers.lastname)}}
             @if(tiers.isNewTiers){
