--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -174,6 +174,15 @@
                     <chips-phone label="Téléphones" [(model)]="selectedResponsable.phones" [form]="principalForm"
                       propertyName="phones" [isDisabled]="!editMode"></chips-phone>
                   </td>
+                  <td>
+                    <select-age-range [(model)]="selectedResponsable.ageRange" label="Tranche d'âge"
+                      [form]="principalForm" propertyName="ageRange" [isDisabled]="!editMode" [isMandatory]="false">
+                    </select-age-range>
+                  </td>
+                  <td>
+                    <generic-input [(model)]="selectedResponsable.linkedInUrl" label="Profil LinkedIn"
+                      [form]="principalForm" propertyName="linkedInUrl" [maxLength]="250"></generic-input>
+                  </td>
                 </tr>
               </table>
               <table class="full-width">
