first version of detail responsable

--- a/client-osiris/src/app/libs/generic-list/generic-list.component.html
+++ b/client-osiris/src/app/libs/generic-list/generic-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <app-page-title title="Liste des tiers" />
+  <app-page-title [title]="pageTitle" [breadcrumbPaths]="breadcrumbPaths" />
   <div class="row g-1">
     <div class="col-12">
       <div class="card  ">
