--- a/client-osiris/src/app/modules/tiers/components/tiers/tiers.component.html
+++ b/client-osiris/src/app/modules/tiers/components/tiers/tiers.component.html
@@ -1,4 +1,5 @@
 <div class="container-fluid" *ngIf="tiers">
+  <app-page-title title="Détail du tiers" [breadcrumbPaths]="breadcrumbPaths" [isMarginBottom]="false" />
   <tiers-header [tiers]="tiers" />
   <div class="row g-3">
     <!---------------- First column -------------->
@@ -118,9 +119,12 @@
         </div>
       </ui-card>
 
-      <ui-card title="Responsables du tiers">
+      <ui-card title="Responsables du tiers" [isTogglable]="true" [isCloseable]="true" [isReloadable]="true"
+        [customButtonIcon]="inactiveResponsablesIcon" [customButtonTooltip]="inactiveResponsablesTooltip"
+        (isCustomButtonSelected)="showInactiveResponsables()">
         <div card-body>
-          @for (respo of tiersResponsables; track $index; let last = $last;let first = $first) {
+          @for (respo of tiersResponsablesToDisplay; track $index; let last = $last;let first = $first) {
+          @if(respo.isActive==undefined || (!respo.isActive && isShowInactiveResponsable)){
           <div class="justify-content-start row">
             <div
               class="d-flex col justify-content-between align-items-center {{!last && 'border-bottom'}} {{first ? 'pb-2' : 'py-2'}}">
@@ -132,7 +136,9 @@
                   </a>
                 </div>
                 <div>
-                  <h5 class="fs-sm mb-0 lh-base">{{ respo.firstname +" "+ respo.lastname}}</h5>
+                  <h5 class="fs-sm mb-0 lh-base">{{ respo.firstname +" "+ respo.lastname}} <span
+                      class="ms-2 badge badge-square text-bg-danger topbar-badge p-1">Inactif</span>
+                  </h5>
                   @if (respo.responsableCategory) {
                   <a class="text-muted fs-xs mb-0">{{ respo.responsableCategory }}</a>
                   }
@@ -153,6 +159,7 @@
               </div>
             </div>
           </div>
+          }
           }
         </div>
       </ui-card>
