--- a/client-osiris/src/app/modules/main/components/page-title/page-title.component.html
+++ b/client-osiris/src/app/modules/main/components/page-title/page-title.component.html
@@ -1,21 +1,24 @@
-<div class="page-title-head d-flex align-items-center">
+<div class="page-title-head d-flex align-items-center" [ngClass]="{'mb-0': !isMarginBottom}">
   <div class="flex-grow-1">
     <h4 class="fs-sm text-uppercase fw-bold m-0">{{ title }}</h4>
   </div>
 
   <div class="text-end">
     <ol class="breadcrumb m-0 py-0">
-      <li class="breadcrumb-item"><a routerLink="/">Journal Spécial des Sociétés</a></li>
-      <li class="d-flex justify-content-center align-items-center">
-        <ng-icon name="tablerChevronRight" size="14" class="breadcrumb-arrow  mx-1" />
+      @for(path of breadcrumbPaths; track $index){
+      <li class="breadcrumb-item" [ngClass]="{'active': $index == (breadcrumbPaths.length-1)}">
+        @if($index != (breadcrumbPaths.length-1)) {
+        <a [routerLink]="path.route">{{path.label}}</a>
+        } @else {
+        {{path.label}}
+        }
       </li>
-      @if (subTitle) {
-      <li class="breadcrumb-item"><a href="javascript: void(0);">{{ subTitle }}</a></li>
+      @if($index != (breadcrumbPaths.length-1)) {
       <li class="d-flex justify-content-center align-items-center">
         <ng-icon name="tablerChevronRight" size="14" class="breadcrumb-arrow  mx-1" />
       </li>
       }
-      <li class="breadcrumb-item active">{{ title }}</li>
+      }
     </ol>
   </div>
 </div>
